tests/paczka1/fuzzy1/13691387.err
Error in line 7: NMGQ68O A431 27,7
Error in line 10: NMGQ68O A579 27,0
Error in line 11: NMGQ68O S504 5,8
Error in line 12: NMGQ68O A431 33,2
Error in line 14: NMGQ68O A156 63,5
Error in line 39: flVCj3QEA S504 37,8
